<resources>
    <string name="app_name">ExpenseManager</string>
    <string name="content_image_intro">Introductory Images</string>
    <string name="intro_sign_in">Login</string>
    <string name="intro_register">Register</string>
    <string name="intro_welcome">One stop for all expenses</string>
    <string name="intro_welcome_detailed">Share and Add all of your expenses at one place with your friends and family</string>
    <string name="intro_description">Register</string>
    <string name="sign_in_screen_login">LOGIN</string>
    <string name="sign_in_screen_email">Email</string>
    <string name="sign_in_screen_password">Password</string>
    <string name="signup_label">REGISTER</string>
    <string name="name_label">Name</string>
    <string name="pwd_label">Password</string>
    <string name="email_label">Email</string>
    <string name="please_wait">Please Wait</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string-array name="expense_category">
        <item>Food</item>
        <item>Entertainment</item>
        <item>Travel</item>
        <item>Shopping</item>
        <item>Others</item>
    </string-array>
</resources>
