<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_intro_act"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.IntroActivity"
    android:background="@drawable/intro_background"
    android:orientation="vertical"
    >
    <TextView
        android:id="@+id/intro_app_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textSize="@dimen/intro_screen_title_text_size"
        android:textColor="@color/app_name_heading"
        android:layout_marginTop="@dimen/intro_screen_title_text_marginTop"
        />

    <ImageView
        android:layout_marginTop="@dimen/intro_screen_image_marginTop"
        android:id="@+id/iv_expense_image"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="@dimen/intro_screen_image_height"
        android:scaleType="centerCrop"
        android:contentDescription="@string/content_image_intro"
        android:src="@drawable/intro_expense_tracking"
        />

    <TextView
        android:layout_marginTop="@dimen/intro_text_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/intro_welcome"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
     />

    <TextView
        android:layout_marginTop="@dimen/intro_text_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/intro_welcome_detailed"
        android:textSize="@string/intro_sign_in"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        >

        <Button
            android:id="@+id/btn_sign_in_intro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textColor="@android:color/white"
            android:text="@string/intro_sign_in"
            android:padding="10dp"
            android:textStyle="bold"
            android:background="@drawable/shape_button_rounded"
            />

        <Button
            android:layout_marginTop="10dp"
            android:id="@+id/btn_sign_up_intro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="@dimen/btn_text_size"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textColor="@android:color/white"
            android:text="@string/intro_register"
            android:padding="10dp"
            android:textStyle="bold"
            android:background="@drawable/shape_button_rounded"
            />

    </LinearLayout>




</LinearLayout>
