<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_sign_bg"
    tools:context=".activities.SignInActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/login_screen_layout_margin"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/login_screen_layout_margin_bottom"
            android:text="@string/sign_in_screen_login"
            android:textStyle="bold"
            android:textColor="@color/grey"
            android:textSize="@dimen/login_screen_text_view_login_text_size"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_screen_email"
                android:textSize="@dimen/login_screen_text_view_email_text_size"/>

            <EditText
                android:id="@+id/et_sign_in_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/login_screen_layout_margin_bottom"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_screen_password"
                android:textSize="@dimen/login_screen_text_view_password_text_size"/>

            <EditText
                android:id="@+id/et_sign_in_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:layout_marginBottom="@dimen/login_screen_layout_margin_bottom"/>

        </LinearLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/sign_in_screen_login"
            android:background="@drawable/shape_button_rounded_sign_up"
            android:textSize="@dimen/login_screen_button_login_text_size"/>

    </LinearLayout>


</LinearLayout>
